Adicionando mais dados

--- a/src/app/pages/menu/menu.component.html
+++ b/src/app/pages/menu/menu.component.html
@@ -29,6 +29,9 @@
     <h1 class="menu-title">
       <span class="accent">ERP</span> — Painel Principal
     </h1>
+
+    <!-- Aqui você coloca o conteúdo da página -->
+
   </main>
 
 </div>
