--- a/src/app/pages/operacao/operacao.component.css
+++ b/src/app/pages/operacao/operacao.component.css
@@ -39,7 +39,7 @@
   margin-left: 15px;
   transition: 0.2s;
 }
-
+/* Efeito hover nos botões do header*/
 .header-buttons span:hover {
   transform: scale(1.2);
   opacity: .8;
