Adicionando mais dados

--- a/src/app/pages/menu/menu.component.html
+++ b/src/app/pages/menu/menu.component.html
@@ -25,13 +25,8 @@
   </aside>
 
   <!-- CONTEÚDO PRINCIPAL -->
-  <main class="main-content">
-    <h1 class="menu-title">
-      <span class="accent">ERP</span> — Painel Principal
-    </h1>
-
-    <!-- Aqui você coloca o conteúdo da página -->
-
-  </main>
+<main class="main-content">
+  <router-outlet></router-outlet>
+</main>
 
 </div>
